[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/EasterEgg1.gd" type="Script" id=1]
[ext_resource path="res://free-assets/fonts/Balsamiq/BalsamiqSans-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 28
extra_spacing_top = -2
extra_spacing_bottom = -4
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "fade_in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ControlAnimation:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ControlAnimation:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 50 ), Vector2( 0, 50 ), Vector2( 0, 0 ) ]
}

[node name="EasterEgg3" type="Button"]
margin_left = 1382.0
margin_top = 179.0
margin_right = 1720.0
margin_bottom = 641.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Square" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1200.0
margin_right = -1350.0
margin_bottom = -180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlAnimation" type="Control" parent="Square"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 50.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="Square/ControlAnimation"]
margin_right = 401.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FG" type="ColorRect" parent="Square/ControlAnimation"]
margin_left = 9.0
margin_top = 11.0
margin_right = 391.0
margin_bottom = 170.0
color = Color( 0.717647, 0.419608, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Square/ControlAnimation"]
margin_top = 46.0
margin_right = 401.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Square"]
anims/fade_in = SubResource( 7 )
[connection signal="pressed" from="." to="." method="_on_EasterEgg1_pressed"]
[connection signal="meta_clicked" from="Square/ControlAnimation/Text" to="." method="_on_Text_meta_clicked"]
